# libass

./: CMakeLists.txt  tools.cmake
cmake/: CMakeASM_YASMInformation.cmake
libass/: ass.h  ass_bitmap.c  ass_bitmap.h  ass_directwrite.c  ass_outline.c  ass_render.c  ass_render.h
libass/x86/: blend_bitmaps.asm
test/: test.c
